2016-07-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/dump-client-custom-compress+amfetchdump.pl,
	  installcheck/dump-client-encrypt+amfetchdump.pl,
	  installcheck/dump-server-custom-compress+amfetchdump.pl,
	  installcheck/dump-server-encrypt+amfetchdump.pl: restore in a
	  testdir, check the dump is restored

2016-07-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Restore.pm: srvcompprog and clntcompprog are string
	* installcheck/Makefile.am (server_tests): Add new test scripts
	* installcheck/dump-client-custom-compress+amfetchdump.pl,
	  installcheck/dump-client-encrypt+amfetchdump.pl,
	  installcheck/dump-server-custom-compress+amfetchdump.pl,
	  installcheck/dump-server-encrypt+amfetchdump.pl: New test scripts

2016-07-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Configs.pl, installcheck/amgetconf.pl:
	  Change for new value of send-amreport-on

2016-07-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Config.pm (new): Set send-amreport-on to
	  never

2016-07-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm (load_ps_table): Skip partial line

2016-07-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amflock.c: Typo
	* perl/Amanda/Tapelist.swg (relaod): Take the lock before checking
	  force
	* perl/Amanda/Tapelist.swg (write): Verify we have the lock
	* perl/Amanda/Rest/Storages/Labels.pm: Take the tapelist lock
	* installcheck/Amanda_Rest_Storages_Labels.pl: Do not exit
	* installcheck/Amanda_Tapelist.pl: Reload the tapelist
	* installcheck/Amanda_Taper_Scan_lexical.pl: Reload the tapelist
	* installcheck/Amanda_Taper_Scan_oldest.pl: Reload the tapelist
	* installcheck/Amanda_Taper_Scan_traditional.pl: Reload the tapelist
	* installcheck/amlabel.pl: Reload the tapelist
	* installcheck/amreport.pl: unlink "$mail_mock.bogus"
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,